feat: optimize blockstream processing (#358)
Signed-off-by: Matt Peterson <matt.peterson@swirldslabs.com>